# DisplayControl

./: .gitignore  CMakeLists.txt  configs.h  sdkconfig  sdkconfig.old
disp_drv/: disp_drv.c  disp_drv.h  pins.h  queued_i2s_parallel.c  queued_i2s_parallel.h
http/: http.c  http.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
mkspiffs/: read .bat  readme.txt  write.bat
mkspiffs/files/: .gitignore  index.html
player/: play.c  play.h
sdfat/: sdfat.c  sdfat.h
spiflash/: spiflash.c  spiflash.h
sys_config_storage/: sys_storage.c  sys_storage.h
system/: sys.c  sys.h
testWeb/: index.html  index11.html
uart/: uart.c  uart.h
web/: index.html  setcss.html  test.html
wifi/: wifi_ap_sta.c  wifi_ap_sta.h
